Fixed horizontal scroll

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -98,7 +98,6 @@
 }
 
 .contact {
-  width: 100%;
   padding: 0 15% 5% 15%;
 }
 
